fixed not functional petitions to localhost